Last child margin fix.

--- a/less/misc.less
+++ b/less/misc.less
@@ -6,6 +6,9 @@
    -webkit-box-sizing: border-box; 
    -moz-box-sizing: border-box; 
    box-sizing: border-box;
+   &:last-child {
+        margin-bottom: 0;
+   }
 }
 
 // This part should be rewised
