--- a/less/forms.less
+++ b/less/forms.less
@@ -24,9 +24,10 @@ input[type="tel"],
 textarea {
     background: #fff;
     border: 1px solid @borderClickable;
+    border-radius: @cornerRadius;
     font-size: 1em;
     line-height: @bodyBaseline;
-    padding: 0.5em;
+    padding: 0.5em 0.7em;
 }
 
 textarea {
