--- a/less/variables.less
+++ b/less/variables.less
@@ -27,7 +27,7 @@
 // Colors
 // ==========================================================
 
-@linkColor:            blue;
+@linkColor:            darken(@atk-swatch-blue,10%);
 @linkColorHover:       red;
 
 @borderStatic:         #e1e1e1;
@@ -42,11 +42,11 @@
 @colorLight:           #fff; // (!)
 @colorDark:            #000; // (!)
 
-@atk-swatch-blue:	   rgb(90, 198, 255);			.createSwatch(atk-swatch-blue);
-@atk-swatch-red:       rgb(255, 130, 130);			.createSwatch(atk-swatch-red);
-@atk-swatch-green:     rgb(160, 236, 111);			.createSwatch(atk-swatch-green);
-@atk-swatch-yellow:    rgb(253, 235, 117);			.createSwatch(atk-swatch-yellow);
-@atk-swatch-gray:      rgb(241, 241, 242);			.createSwatch(atk-swatch-gray);
+@atk-swatch-gray:	   #e6f2ec;		.createSwatch(atk-swatch-gray);
+@atk-swatch-ink:       #1c2933;		.createSwatch(atk-swatch-ink);
+@atk-swatch-yellow:	   #ffcc00;		.createSwatch(atk-swatch-yellow);
+@atk-swatch-green:     #00cc66;		.createSwatch(atk-swatch-green);
+@atk-swatch-blue:      #0095ff;		.createSwatch(atk-swatch-blue);
 
 @effectSuccess:        #ccffdb;
 @effectWarning:        #fcffcc;
