--- a/less/widgets.less
+++ b/less/widgets.less
@@ -10,7 +10,8 @@
 }
 .atk-bar {
     line-height: 1;
-    padding: @margin 0;
+    padding-top: @margin;
+    padding-bottom: @margin;
     width: 100%;
     &.atk-cells>* {
         padding-right: 2.5em;
