--- a/less/misc.less
+++ b/less/misc.less
@@ -111,6 +111,9 @@ a {
 
 
 // Shapes
+.atk-shape-rectangle {
+    border-radius: 0;
+}
 .atk-shape-rounded {
     &, img& {
         .border-radius(@cornerRadius);
