--- a/less/widgets.less
+++ b/less/widgets.less
@@ -6,7 +6,10 @@
         + * {
             margin-left: 0.3em;
         }
-    }   
+        &.atk-sep + * {
+            margin-left: 0;
+        }
+    }
 }
 .atk-bar {
     line-height: 1;
@@ -40,11 +43,11 @@
         + li a {
             margin: 0 0 0 2em;
         }
-        &:first-child a {
+        &:first-child a:not(.atk-button) {
             .border-radius(@cornerRadius 0 0 @cornerRadius);
             // margin: 0;
         }
-        &:last-child a {
+        &:last-child a:not(.atk-button) {
             .border-radius(0 @cornerRadius @cornerRadius 0);
         }
     }
@@ -82,6 +85,41 @@
         &:after {
             background: #fff;
             border-color: @borderStatic;
+        }
+    }
+}
+
+
+// Popover
+.atk-popover.ui-dialog {
+    border-color: @borderStatic;
+    border-radius: @cornerRadius;
+    box-shadow: 0 5px 10px fade(black,30%);
+    >.ui-dialog-titlebar {
+        display: none;
+    }
+    >.ui-dialog-content {
+        background: #fff;
+        border-radius: @cornerRadius;
+        padding: @margin/2;
+        z-index: 2;
+    }
+    .atk-arrow.top {
+        .position(@b:100%,@l:@margin/2);
+        width: 12px;
+        height: 6px;
+        z-index: 1 !important;
+        overflow: hidden;
+        &:after {
+            .rotate(45deg);
+            background: #fff;
+            border: 1px solid @borderStatic;
+            content: '';
+            display: block;
+            width: 10px;
+            height: 10px;
+            position: relative;
+            top: 2px;
         }
     }
 }
