New components and settings.

--- a/less/components.less
+++ b/less/components.less
@@ -63,7 +63,7 @@
     width: 100%;
     > .atk-cell {
         display: table-cell;
-        vertical-align: top;
+        vertical-align: middle;
         .box-sizing();
     }
     &.atk-cells-gutter-large .atk-cell + .atk-cell {
