--- a/less/variables.less
+++ b/less/variables.less
@@ -32,7 +32,7 @@
 @linkColor:            darken(@atk-swatch-blue,10%);
 @linkColorHover:       red;
 
-@textSelect:           red; // Text selection's background color
+@textSelect:           @atk-swatch-ink; // Text selection's background color
 
 @borderStatic:         #e1e1e1;
 @borderClickable:      #c1c1c1;
@@ -42,7 +42,7 @@
 @stateHover:           #f5f5f5;
 @stateActive:          #eee;
 
-@colorFocus:           blue; // (!)
+@colorFocus:           @atk-swatch-blue; // (!)
 @colorLight:           #fff; // (!)
 @colorDark:            #000; // (!)
 
