--- a/less/components.less
+++ b/less/components.less
@@ -15,6 +15,7 @@
     }
 }
 
+
 // ==========================================================
 // Components
 // ==========================================================
@@ -111,26 +112,28 @@ input[type=submit] {
     box-shadow: none !important;
     color: #fff !important;
 }
-.atk-box, .atk-box-small, .atk-box-large {
-    .border-radius(@cornerRadius);
-    background: @colorLight;
-    border: 1px solid @borderStatic;
-    padding: @margin;
-    margin-bottom: @margin;
-    >h1, >h2, >h3, >h4, >h5, >h6 {
-        &:first-child {
-            margin-top: 0;
+*[class*=atk-box] {
+    &, &[class*=span] {
+        .border-radius(@cornerRadius);
+        background: @colorLight;
+        border: 1px solid @borderStatic;
+        padding: @margin;
+        margin-bottom: @margin;
+        >h1, >h2, >h3, >h4, >h5, >h6 {
+            &:first-child {
+                margin-top: 0;
+            }
+        }
+        &.atk-box-small {
+            padding: @margin/2;
+        }
+        &.atk-box-large {
+            padding: @margin*2;
+        }
+        &:last-child {
+            margin-bottom: 0;
         }
     }
-    &:last-child {
-        margin-bottom: 0;
-    }
-}
-.atk-box-small {
-    padding: @margin/2;
-}
-.atk-box-large {
-    padding: @margin*2;
 }
 .atk-section-small {
     padding: @margin/2 0;
